# librist

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  NEWS  README.md  THANKS.md  meson.build  meson_options.txt
compat/gcc/: stdatomic.h
compat/msvc/: stdatomic.h
contrib/: aes.c  aes.h  common.h  endian-shim.h  fastpbkdf2.c  fastpbkdf2.h  getopt-shim.c  getopt-shim.h  libevsocket.c  libevsocket.h  linux-crypto.c  linux-crypto.h  pthread-shim.c  pthread-shim.h  sha256.c  sha256.h  socket-shim.h  stdio-shim.c  stdio-shim.h  time-shim.c  time-shim.h
docs/: Theory.ods
extra/: aes.c  aes.h  common.h  endian-shim.h  fastpbkdf2.c  fastpbkdf2.h  libevsocket.c  libevsocket.h  linux-crypto.c  linux-crypto.h  network.c  network.h  pthread-shim.c  pthread-shim.h  sha256.c  socket-shim.h  stdio-shim.h  time-shim.c  time-shim.h
inc/: librist.h
include/: librist.h  librist_udpsocket.h  meson.build  vcs_version.h.in
include/common/: attributes.h
include/librist/: common.h  headers.h  librist.h  logging.h  meson.build  udpsocket.h  version.h.in
scripts/: analyze.sh
src/: crypto-private.h  crypto.c  flow.c  libevsocket.c  libevsocket.h  log-private.h  log.c  logging.c  mpeg2rist.c  rist-common.c  rist-private.h  rist.c  rist.c.orig  rist2mpeg.c  rist2rist.c  stats.c  udp-private.h  udp.c  udpsocket.c  udpsocket.h
test/: meson.build  test.ts
test/rist/: example-test.c  meson.build  test_send_receive.c
tools/: meson.build  rist2rist.c  ristreceiver.c  ristsender.c  risturlhelp.h
